--- a/SOS/SOS.cbp
+++ b/SOS/SOS.cbp
@@ -23,8 +23,10 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
+		<Unit filename="../CpuScheduler.h" />
+		<Unit filename="../Job.h" />
+		<Unit filename="../MemoryManager.h" />
 		<Unit filename="../os.cpp" />
-		<Unit filename="../sos.o" />
 		<Extensions>
 			<code_completion />
 			<envvars />
