--- a/OSProject/OSProject.cbp
+++ b/OSProject/OSProject.cbp
@@ -2,12 +2,12 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="SOS" />
+		<Option title="OSProject" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Release">
-				<Option output="bin/Release/SOS" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Release/OSProject" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -23,10 +23,7 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
-		<Unit filename="../CpuScheduler.h" />
-		<Unit filename="../Job.h" />
-		<Unit filename="../MemoryManager.h" />
-		<Unit filename="../os.cpp" />
+		<Unit filename="main.cpp" />
 		<Extensions>
 			<code_completion />
 			<envvars />
