Fixed CodeBlocks project layout
^

--- a/OSProject/OSProject.cbp
+++ b/OSProject/OSProject.cbp
@@ -23,7 +23,12 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
-		<Unit filename="main.cpp" />
+		<Unit filename="CpuScheduler.h" />
+		<Unit filename="Job.h" />
+		<Unit filename="MemoryManager.h" />
+		<Unit filename="README.md" />
+		<Unit filename="os.cpp" />
+		<Unit filename="sos.o" />
 		<Extensions>
 			<code_completion />
 			<envvars />
